# flask-factory-architecture

./: README.md  pyproject.toml
app/: database.db  main.py
app/config/: config.py
app/controller/: user.py
app/model/: database.py  serializer.py  tables.py
app/resource/: user.py
